# Hexagon_Game

./: CMakeLists.txt  README.md
assets/: scores.txt
src/: Board.cpp  Board.h  Config.h  Game.cpp  Game.h  Hexagon.cpp  Hexagon.h  Score.cpp  Score.h  UI.cpp  UI.h  main.cpp
